Fixes the issues that header disapear or map area overlap with the header in some case of use

--- a/inst/app/www/cap-bc/header.css
+++ b/inst/app/www/cap-bc/header.css
@@ -21,7 +21,7 @@ colors:
 */
 
 .header-section {
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
   width: 100%;
